// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`01 - Node.js CI with Matrix 1`] = `
{
  "cdkactions_node-ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'ci' stack.
name: Node.js CI
on:
  push:
    branches:
      - main
    paths:
      - .github/workflows/cdkactions_node-ci.yaml
      - src/**
      - package.json
  pull_request:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    strategy:
      fail-fast: false
      matrix:
        nodeVersion:
          - "18"
          - "20"
          - "22"
    steps:
      - uses: actions/checkout@v4
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: \${{ matrix.node-version }}
      - name: Install
        run: npm ci
      - name: Lint
        run: npm run lint
      - name: Test
        run: npm test
"
,
}
`;

exports[`02 - Docker Build and Push 1`] = `
{
  "cdkactions_docker.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'docker' stack.
name: Docker Publish
on:
  push:
    branches:
      - main
    tags:
      - v*
permissions:
  contents: read
  packages: write
concurrency:
  group: docker-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  push:
    environment:
      name: production
      url: https://ghcr.io
    permissions:
      contents: read
      packages: write
      attestations: write
      id-token: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Login to GHCR
        uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ github.actor }}
          password: \${{ secrets.GITHUB_TOKEN }}
      - name: Build and push
        uses: docker/build-push-action@v5
        with:
          push: true
          tags: ghcr.io/\${{ github.repository }}:latest
"
,
}
`;

exports[`03 - Multi-Job Pipeline with Dependencies 1`] = `
{
  "cdkactions_pipeline.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'pipeline' stack.
name: Build → Test → Deploy
on:
  push:
    branches:
      - main
jobs:
  build:
    outputs:
      artifact_id: \${{ steps.upload.outputs.artifact-id }}
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
      - id: upload
        name: Upload
        uses: actions/upload-artifact@v4
        with:
          name: dist
          path: dist/
  test:
    needs:
      - build
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Test
        run: npm test
  deploy:
    if: github.ref == 'refs/heads/main'
    environment: production
    needs:
      - test
    runs-on: ubuntu-latest
    steps:
      - name: Download artifact
        uses: actions/download-artifact@v4
        with:
          name: dist
      - name: Deploy
        run: ./deploy.sh
  notify:
    needs:
      - deploy
    runs-on: ubuntu-latest
    if: always()
    steps:
      - name: Notify
        run: echo "Pipeline finished"
"
,
}
`;

exports[`04 - Scheduled Workflow with Cron 1`] = `
{
  "cdkactions_stale.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'stale' stack.
name: Close Stale Issues
on:
  schedule:
    - cron: 0 0 * * *
      timezone: America/New_York
    - cron: 0 12 * * *
      timezone: America/New_York
jobs:
  stale:
    permissions:
      issues: write
      pull-requests: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/stale@v9
        with:
          days-before-stale: 60
          days-before-close: 7
          stale-issue-message: This issue is stale.
"
,
}
`;

exports[`05 - Manual Dispatch with Typed Inputs 1`] = `
{
  "cdkactions_deploy-manual.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'deploy' stack.
name: Manual Deploy
run-name: Deploy \${{ inputs.environment }} by \${{ github.actor }}
on:
  workflow_dispatch:
    inputs:
      environment:
        type: environment
        description: Target environment
        required: true
      dryRun:
        type: boolean
        description: Dry run only
        required: false
        default: false
      logLevel:
        type: choice
        description: Log verbosity
        required: true
        options:
          - debug
          - info
          - warn
          - error
      concurrency:
        type: number
        description: Parallel deploy count
        required: false
        default: "1"
jobs:
  deploy:
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo "Deploying..."
"
,
}
`;

exports[`06 - Reusable Workflow (workflow_call) 1`] = `
{
  "cdkactions_build-reusable.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'reusable' stack.
name: Reusable Build
on:
  workflow_call:
    inputs:
      nodeVersion:
        type: string
        description: Node.js version
        required: true
      uploadArtifact:
        type: boolean
        description: Upload build artifact
        required: false
        default: true
    outputs:
      buildHash:
        description: SHA of the build output
        value: \${{ jobs.build.outputs.hash }}
    secrets:
      npmToken:
        required: true
      sentryDsn:
        required: false
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
"
,
  "cdkactions_release.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'reusable' stack.
name: Release
on:
  push:
    tags:
      - v*
jobs:
  call-build:
    with:
      nodeVersion: "20"
      uploadArtifact: true
    secrets: inherit
    uses: ./.github/workflows/cdkactions_build-reusable.yaml
"
,
}
`;

exports[`07 - Container Job with Services 1`] = `
{
  "cdkactions_integration.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'integration' stack.
name: Integration Tests
on:
  push:
    branches:
      - main
jobs:
  integration:
    container:
      image: node:20-bookworm
      env:
        NODE_ENV: test
      volumes:
        - /tmp/cache:/cache
      options: "--cpus 2"
    services:
      postgres:
        image: postgres:16
        env:
          POSTGRES_USER: test
          POSTGRES_PASSWORD: test
          POSTGRES_DB: testdb
        ports:
          - 5432:5432
        options: "--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5"
      redis:
        image: redis:7
        ports:
          - 6379:6379
        command: redis-server --requirepass testpass
        entrypoint: ""
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Run integration tests
        run: npm run test:integration
"
,
}
`;

exports[`08 - Composite Action with Typed I/O 1`] = `
{
  "cdkactions_ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'composite' stack.
name: CI
on:
  push:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    steps: []
"
,
}
`;

exports[`09 - Typed Expressions and Conditions 1`] = `
{
  "cdkactions_expressions.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'expressions' stack.
name: Expressions Demo
on:
  push:
    branches:
      - main
jobs:
  deploy:
    if: (github.ref == 'refs/heads/main' && !github.actor == 'dependabot[bot]')
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo deploying
"
,
}
`;

exports[`10 - Cross-Workflow Dependencies 1`] = `
{
  "cdkactions_ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'cross-wf' stack.
name: CI
on:
  push:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - name: Build
        run: npm run build
"
,
  "cdkactions_deploy.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'cross-wf' stack.
name: Deploy
on:
  workflow_run:
    workflows:
      - CI
jobs:
  deploy:
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo deploying
"
,
}
`;

exports[`11 - Full Permissions and Concurrency 1`] = `
{
  "cdkactions_secure.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'secure' stack.
name: Security Scan
on:
  push:
    branches:
      - main
permissions:
  actions: read
  contents: read
  security-events: write
  id-token: write
  models: read
concurrency:
  group: security-\${{ github.ref }}
  cancel-in-progress: false
jobs:
  scan:
    concurrency: scan-serial
    permissions:
      security-events: write
      contents: read
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - uses: github/codeql-action/init@v3
      - uses: github/codeql-action/analyze@v3
"
,
}
`;

exports[`12 - Multi-Platform Build with Runner Groups 1`] = `
{
  "cdkactions_build.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'multi-platform' stack.
name: Multi-Platform Build
on:
  push:
    branches:
      - main
jobs:
  build:
    continue-on-error: true
    timeout-minutes: 60
    runs-on:
      group: large-runners
      labels:
        - linux-x64-8core
    strategy:
      fail-fast: false
      max-parallel: 4
      matrix:
        os:
          - ubuntu-latest
          - macos-latest
          - windows-latest
        arch:
          - x64
          - arm64
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: make build ARCH=\${{ matrix.arch }}
"
,
}
`;

exports[`13 - GitHub Pages Deployment 1`] = `
{
  "cdkactions_pages.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'pages' stack.
name: Deploy to Pages
on:
  push:
    branches:
      - main
permissions:
  contents: read
  pages: write
  id-token: write
concurrency:
  group: pages
  cancel-in-progress: false
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
      - uses: actions/upload-pages-artifact@v3
        with:
          path: ./dist
  deploy:
    environment:
      name: github-pages
      url: \${{ steps.deployment.outputs.page_url }}
    needs:
      - build
    runs-on: ubuntu-latest
    steps:
      - id: deployment
        uses: actions/deploy-pages@v4
"
,
}
`;

exports[`14 - Event Coverage: Discussions, Branch Protection, Merge Group 1`] = `
{
  "cdkactions_branch-rules.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
name: Branch Protection Audit
on:
  branch_protection_rule:
    types:
      - created
      - edited
      - deleted
jobs:
  audit:
    runs-on: ubuntu-latest
    steps:
      - name: Audit
        run: echo "Branch rule changed"
"
,
  "cdkactions_discussion-bot.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
name: Discussion Bot
on:
  discussion:
    types:
      - created
      - answered
      - unanswered
      - category_changed
  discussion_comment:
    types:
      - created
jobs:
  handle:
    runs-on: ubuntu-latest
    steps:
      - name: Handle
        run: echo "Discussion event"
"
,
  "cdkactions_merge-queue.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
name: Merge Queue CI
on:
  merge_group:
    types:
      - checks_requested
jobs:
  ci:
    runs-on: ubuntu-latest
    steps:
      - name: CI
        run: echo "Merge queue check"
"
,
}
`;

exports[`15 - Central Runner Registry 1`] = `
{
  "cdkactions_custom-runners.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'runners' stack.
name: Custom Runners
on:
  push:
    branches:
      - main
jobs:
  build-x64:
    runs-on: ci-linux-x64
    steps:
      - name: Build
        run: make build
  build-arm:
    runs-on: ci-arm64
    steps:
      - name: Build
        run: make build ARCH=arm64
  train:
    timeout-minutes: 360
    runs-on: gpu-a100-80gb
    steps:
      - name: Train model
        run: python train.py
"
,
}
`;

exports[`16 - Typed Action References 1`] = `
{
  "cdkactions_build.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'action-refs' stack.
name: Build with Action
on:
  push:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - id: co
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
          lfs: true
      - id: node
        uses: actions/setup-node@v4
        with:
          node-version: "20"
          cache: npm
      - name: Build
        run: npm run build
      - id: upload
        uses: actions/upload-artifact@v4
        with:
          name: dist
          path: dist/
"
,
}
`;
